--- a/My-webapp/src/app/footer/footer.component.html
+++ b/My-webapp/src/app/footer/footer.component.html
@@ -1,96 +1,59 @@
-<!-- init footer-->
-<section class="footer-contact" style="padding: 20px 45px; margin-top: 50px;">
-  <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+
+<!-- Footer -->
+<footer>
+    <div class="container">
       <div class="row">
-          <div class="col-12 d-flex p-2" style="text-align: justify;"></div>
-          <div class="col-12" style="text-align: justify;">
-              <hr style="border-top: 1px solid #1c1835;" />
-              Siamo a tua disposizione per qualsiasi informazione.
-              <a href="" style="text-decoration: underline;">Compila il modulo di contatto</a>, telefona al numero +39 38 92 978 507 oppure scrivi a
-              <a href="mailto:gueaserge2@gmail.com" style="text-decoration: underline;">gueaserge2@gmail.com</a>
-          </div>
-      </div>
-  </div>
-</section>
-<div>
-  <div class="container">
-      <div class="row">
-          <div class="col-12">
-              <hr style="border-top: 1px solid #1c1835;" />
-          </div>
-      </div>
-  </div>
-</div>
-<!-- form-->
-<article class="about-section py-5">
-  <div class="container" style="background: rgb(40, 155, 163);">
-      <form>
-          <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
-          </div>
-          <div class="form-group">
-              <label for="Message">Message</label>
-              <textarea class="form-control" id="Message"></textarea>
-          </div>
-          <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-              <label class="form-check-label" for="exampleCheck1">Subscribe to Newsletter</label>
-          </div>
-          <button type="submit" class="btn btn-primary">Invia Messaggi</button>
-      </form>
-  </div>
-</article>
-<!-- form-->
-<div class="footer-top" style="background: rgb(40, 175, 175);">
-  <div class="container">
-      <div class="row">
-          <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>My WebApp <br /></h3>
-              <p>
-                  Via virgilio, 19 <br />
-                  Formia <br />
-                  04023 (LT), Italia<br />
-                  <br />
-                  <strong>Phone:</strong> +39 3892978507<br />
-                  <strong>Email:</strong><a href="mailto:gueaserge2@gmail.com">gueaserge2@gmail.com</a><br />
-              </p>
-          </div>
+        <div class="col-md-6">
+          <h3> Web Service SRL</h3>
+          <ul>
+            <li>via virgilio 19.</li>
+            <li>Formia LT 04023</li>
+            <li>Tel: 3892978507</li>
+            <li>Email: gueaserge2@gmail.com</li>
+          </ul>
+        </div>
+        <!--<div class="col-md-3">
+          <h3>Orari</h3>
+          <ul>
+            <li>Lunedi - Venerdi: 9:00 - 18:00</li>
+            <li>Sabato: 9:00 - 13:00</li>
+            <li>Domenica: Chiuso</li>
+          </ul>
+        </div>-->
 
-          <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Link utili</h4>
-              <ul>
-                  <li>
-                      <i class="bx bx-chevron-right"></i>
-                      <a href="/My-webapp/src/app/home/home.component.html">Home</a>
-                  </li>
-                  <li>
-                      <i class="bx bx-chevron-right"></i>
-                      <a href="/My-webapp/src/app/chi-siamo/chi-siamo.component.html">Chi Siamo</a>
-                  </li>
-                  <li>
-                      <i class="bx bx-chevron-right"></i>
-                      <a href="/My-webapp/src/app/termini-e-condizioni/termini-e-condizioni.component.html">Termini e Condizioni</a>
-                  </li>
-              </ul>
-          </div>
+        <div class="col-md-3">
+          <h3>Link Utili</h3>
+          <ul>
+            <li ><i class="fa-solid fa-angle-left fa-beat-fade"></i><a href="/My-webapp/src/app/chi-siamo/chi-siamo.component.html">Chi siamo</a></li>
+            <li><i class="fa-solid fa-angle-left fa-beat-fade"></i><a href="/My-webapp/src/app/mission/mission.component.html"> Mission</a></li>
+            <li><i class="fa-solid fa-angle-left fa-beat-fade"></i><a href="/My-webapp/src/app/home/home.component.html">Home</a></li>
+            <li><i class="fa-solid fa-angle-left fa-beat-fade"></i> <a href="#"></a>Termini e Condizioni</li>
+          </ul>
+        </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Social network</h4>
-              <p>Contattaci sui Social</p>
-              <div class="social-links mt-3">
-                  <a href="https://www.instagram.com/sergeguea3" class="instagram"><i class="bx bxl-instagram"></i></a>
-                  <a href="https://www.linkedin.com/sergeguea" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
-          </div>
+        <div class="col-md-3">
+          <h3>I Nostri Servizi</h3>
+          <ul>
+            <li><i class="fa-solid fa-angle-left fa-beat-fade"></i>Web Developer</li>
+            <li><i class="fa-solid fa-angle-left fa-beat-fade"></i>Grafic Designer</li>
+            <li><i class="fa-solid fa-angle-left fa-beat-fade"></i>Mobile Developer</li>
+            <li><i class="fa-solid fa-angle-left fa-beat-fade"></i>Service plus</li>
+          </ul>
+        </div>
+        <!--<div class="col-md-3">
+          <h3>Social network</h3>
+          <ul class="social-media">
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li> <a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li> <a href="#"><i class="fab fa-linkedin"></i></a></li>
+          </ul>
+        </div>-->
       </div>
-  </div>
-
-  <div class="container py-4 footer-copyright">
-      <div class="copyright" style="text-align: center;">
-          © Copyright <strong><span>My webApp </span></strong> Tutti i diritti riservati 2023 by Serge Guea
-      </div>
-  </div>
-</div>
-
-<!-- End Footer -->
+    </div>
+    <hr>
+    <div>
+      <p class="text-center">© 2023 My web service. All rights reserved. by Serge Guea</p>
+    </div>
+  </footer>
+  <!-- End Footer -->
