--- a/My-webapp/src/app/home/home.component.css
+++ b/My-webapp/src/app/home/home.component.css
@@ -1,31 +1,23 @@
-
 body {
   font-family: Arial, sans-serif;
-  font-size: 20px;
+  font-size: 16px;
 }
-
-
-section {
-  background-color: #2ac4bf;
-  padding: 50px;
-}
-
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #fff;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+}
+
+nav img {
+  max-width: 200px;
 }
 
 
-.menu {
+nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -34,69 +26,62 @@ nav {
 }
 
 
-.logo {
-  font-size: 20px;
-  font-weight: bold;
+nav .item {
+  margin-left: 20px;
 }
 
-
-.item {
-  margin-left: 160px;
-}
-
-.item a {
+nav .item a {
   text-decoration: none;
-  color: #fff;
+  color: #333;
   font-weight: bold;
 }
 
-.item a:hover {
+nav .item a:hover {
   color: #007bff;
 }
 
-
-.toggle {
+nav .toggle {
   display: none;
   cursor: pointer;
 }
 
-.toggle .bars {
+nav .toggle .bars {
   display: block;
   width: 25px;
   height: 3px;
-  background-color: #3f9ebd;
+  background-color: #333;
   margin: 5px 0;
 }
 
 
+h1{
+  margin: auto;
+  text-align: center;
+  color: #fff;
+  background-image: url(https://img.freepik.com/premium-photo/metal-corroded-texture-background_136401-1872.jpg?size=626&ext=jpg);
+  padding: 40px 0 40px 0;
+}
 
 
-.carousel {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.carousel-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.carousel-item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-.carousel-item.active {
-  opacity: 1;
-}
-.carousel-item img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+@media screen and (max-width: 768px) {
+  nav ul {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #333;
+    padding: 20px;
+    z-index: 1;
+  }
+
+  nav .item {
+    margin: 10px 0;
+  }
+
+  nav .toggle {
+    display: block;
+  }
 }
