--- a/My-webapp/src/app/mission/mission.component.html
+++ b/My-webapp/src/app/mission/mission.component.html
@@ -1,167 +1,63 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>La Nostra Mission</h1>
-    </div>
+
+<style>
+  /* CSS for the missions section */
+#totale {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 0;
+  background-color: #f5f5f5;
+}
+
+#totale h1 {
+  font-size: 3rem;
+  margin-bottom: 30px;
+  color: #333;
+  text-align: left;
+}
+
+#primariga, #secondariga {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.quadrato {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(222, 240, 243);
+  width: 30%;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.quadrato i {
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.quadrato p {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #555;
+}
+
+</style>
+
+<div id="totale">
+  <h1>Mission</h1>
+  <div id="primariga">
+      <div class="quadrato"><i class="fa fa-camera-retro fa-3x"></i><p>Formare Nuove Risorse seguendo le roadmap delle figure professionali richieste dal mercato</p></div>
+      <div class="quadrato"><i class="fa fa-battery-three-quarters fa-3x" aria-hidden="true"></i><p>Certificare le skills professionali</p></div>
+      <div class="quadrato"><i class="fa-sharp fa-solid fa-house fa-3x"></i><p>Soddisfare il gap formativo delle competenze nella sfera digitale</p></div>
   </div>
-
-  <main class="main-content">
-    <div
-      class="row generic-row-margin justify-content-around about-us-mission aos-init aos-animate"
-    >
-      <div
-        class="col-md-4 col-12 text-center about-us-mission-item hvr-underline-from-center"
-      >
-        <img src="/My-webapp/src/assets/img/slider3.jpg" />
-        <p>
-          La nostra mission è quella di creare soluzioni web innovative e
-          personalizzate che aiutino i nostri <br />
-          clienti a raggiungere i loro obiettivi di business online. Vogliamo
-          aiutare le aziende a costruire una <br />
-          presenza online forte e duratura, che permetta loro di interagire con
-          i loro clienti in modo efficace e di ottenere risultati concreti.
-        </p>
-      </div>
-
-      <div
-        class="col-md-4 col-12 text-center about-us-mission-item hvr-underline-from-center"
-      >
-        <img src="/" />
-        <p>
-          Siamo convinti che la chiave del nostro successo sia la capacità di
-          capire le esigenze dei nostri clienti e di creare soluzioni su misura
-          per loro.
-        </p>
-      </div>
-
-      <div
-        class="col-md-4 col-12 text-center about-us-mission-item hvr-underline-from-center"
-      >
-        <img src="/My-webapp/" />
-        <p>
-          Vogliamo essere un partner affidabile per le aziende che cercano di
-          crescere online, offrendo competenza tecnica, attenzione ai dettagli e
-          un servizio di alta qualità.
-        </p>
-      </div>
-
-      <div
-        class="col-md-4 col-12 text-center about-us-mission-item hvr-underline-from-center"
-      >
-        <img src="/images/" />
-        <p>
-          Ci impegniamo a fornire soluzioni web che siano all'avanguardia e al
-          passo con le ultime tendenze del settore. Vogliamo essere leader
-          nell'adozione di nuove tecnologie e nell'implementazione di nuove idee
-          e concetti.
-        </p>
-      </div>
-
-      <div
-        class="col-md-4 col-12 text-center about-us-mission-item hvr-underline-from-center"
-      >
-        <img src="/images/" />
-        <p>
-          Siamo convinti che questo ci permetterà di offrire ai nostri clienti
-          soluzioni innovative e di alta qualità che li aiutino a distinguersi
-          dalla concorrenza.
-        </p>
-      </div>
-
-      <div
-        class="col-md-4 col-12 text-center about-us-mission-item hvr-underline-from-center"
-      >
-        <img src="/images/about-us/planet-earth.svg" />
-        <p>
-          la nostra mission è quella di diventare il partner di fiducia delle
-          aziende che cercano di crescere online, offrendo soluzioni web
-          personalizzate, innovative e di alta qualità che aiutino i nostri
-          clienti a raggiungere i loro obiettivi di business.
-        </p>
-      </div>
-    </div>
-
-    <div
-      class="row generic-row-margin justify-content-around about-us-key-values aos-init aos-animate"
-      data-aos="fade-up"
-      data-aos-delay="300"
-      data-aos-duration="1500"
-    >
-      <div class="col-12">
-        <h2>I Nostri Valori</h2>
-      </div>
-
-      <div class="col-md-4 col-12 text-center about-us-key-values-item">
-        <div class="card hvr-curl-top-left">
-          <div class="card-body">
-            <img src="/images/" />
-            <p>
-              <strong
-                >Qualità: la qualità è al centro di tutto ciò che
-                facciamo.</strong
-              >
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 col-12 text-center about-us-key-values-item">
-        <div class="card hvr-curl-top-left">
-          <div class="card-body">
-            <img src="/images/" />
-            <p>
-              <strong
-                >Innovazione: siamo sempre alla ricerca di nuove idee e di nuove
-                tecnologie che possano migliorare il nostro lavoro e le
-                soluzioni che forniamo ai nostri clienti.
-              </strong>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 col-12 text-center about-us-key-values-item">
-        <div class="card hvr-curl-top-left">
-          <div class="card-body">
-            <img src="/images/" />
-            <p><strong>Collaborazione</strong></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 col-12 text-center about-us-key-values-item">
-        <div class="card hvr-curl-top-left">
-          <div class="card-body">
-            <img src="/images/" />
-            <p>
-              <strong
-                >Professionalità: ci impegniamo a lavorare in modo professionale
-                in ogni fase del nostro lavoro, dall'incontro iniziale fino alla
-                consegna del progetto. Siamo rispettosi dei tempi e delle
-                esigenze dei nostri clienti e manteniamo sempre la massima
-                trasparenza nella comunicazione.</strong
-              >
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 col-12 text-center about-us-key-values-item">
-        <div class="card hvr-curl-top-left">
-          <div class="card-body">
-            <img src="/images/" />
-            <p>
-              <strong
-                >Siamo appassionati dello sviluppo web e del nostro lavoro.
-                Cerchiamo di trasmettere questa passione ai nostri clienti e di
-                creare soluzioni web che siano all'altezza delle loro
-                aspettative.
-              </strong>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br /><br /><br /><br />
-  </main>
+  <div id="secondariga">
+      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Convertire le risorse al cambiamento, attraverso processi di reskilling all’interno delle aziende, per renderle pronte ad affrontare le sfide di un business in continua evoluzione</p></div>
+      <div class="quadrato"><i class="fa-sharp fa-solid fa-cloud fa-3x"></i><p>Diversità e Innovazione proposte formative mirate ad aumentare l’inclusione e l’occupabilità</p></div>
+      <div class="quadrato"><i class="fa-sharp fa-solid fa-face-smile fa-3x"></i><p>Sviluppo di figure professionali capaci di innovare in ambito ambientale ed energetico, grazie all’utilizzo delle nuove tecnologie e degli analytics</p></div>
+  </div>
 </div>
