--- a/My-webapp/src/app/chi-siamo/chi-siamo.component.html
+++ b/My-webapp/src/app/chi-siamo/chi-siamo.component.html
@@ -1,18 +1,14 @@
-<!--init section about-->
-<section>
-  <div class="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="about-img">
-            <img src="/My-webapp/src/assets/img/images.jpg" alt="chi-siamo" />
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="about-content">
-            <h2 class="about-title">Chi siamo</h2>
-            <p class="about-text">
-              Siamo un team di sviluppatori web appassionati e altamente
+
+<!--init section team-->
+<div id="contenitore">
+  <h1>Chi siamo</h1>
+  <h4>Il nostro punto di partenza sono le Digital Skills del futuro.</h4>
+  <p>
+    New Skills & Reskilling delle abilità tecnologiche per le persone e per le
+    aziende.
+  </p>
+  <p>
+    Siamo un team di sviluppatori web appassionati e altamente
               qualificati. Con anni di esperienza nel campo dello sviluppo web,
               ci siamo specializzati nella creazione di siti web e applicazioni
               online personalizzate per le esigenze dei nostri clienti. Ci
@@ -22,29 +18,33 @@
               servizi, tra cui la progettazione e lo sviluppo di siti web, la
               programmazione di applicazioni personalizzate, l'integrazione di
               sistemi esistenti, l'ottimizzazione dei motori di ricerca e la
-              gestione di progetti. Il nostro approccio alla creazione di siti
-              web e applicazioni online è basato sulla collaborazione con i
-              nostri clienti. Ci incontriamo con loro per comprendere le loro
-              esigenze e obiettivi e lavoriamo insieme per creare una soluzione
-              su misura che soddisfi le loro esigenze. Ci impegniamo a fornire
-              una comunicazione costante durante il processo di sviluppo in modo
-              da assicurare che il nostro lavoro sia allineato alle loro
-              aspettative. La nostra passione per lo sviluppo web è alla base
-              del nostro successo. Siamo costantemente aggiornati sulle ultime
-              tecnologie e tendenze del settore, e utilizziamo questo know-how
-              per creare soluzioni all'avanguardia che soddisfino le esigenze
-              dei nostri clienti. Siamo anche molto attenti alla qualità del
-              codice che produciamo, in modo da garantire che le soluzioni che
-              forniamo siano robuste e scalabili. In sintesi, siamo un team di
-              sviluppatori web appassionati, esperti e altamente qualificati che
-              si impegnano a fornire soluzioni personalizzate e di alta qualità
-              ai nostri clienti. Ci teniamo a lavorare a stretto contatto con
-              loro per assicurare che le nostre soluzioni soddisfino le loro
-              esigenze e superino le loro aspettative.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+              gestione di progetti.
+  </p>
+  <p>
+    Il nostro approccio alla creazione di siti
+    web e applicazioni online è basato sulla collaborazione con i
+    nostri clienti. Ci incontriamo con loro per comprendere le loro
+    esigenze e obiettivi e lavoriamo insieme per creare una soluzione
+    su misura che soddisfi le loro esigenze. <br> Ci impegniamo a fornire
+    una comunicazione costante durante il processo di sviluppo in modo
+    da assicurare che il nostro lavoro sia allineato alle loro
+    aspettative. La nostra passione per lo sviluppo web è alla base
+    del nostro successo. <br>
+  </p>
+  <p>
+    Siamo costantemente aggiornati sulle ultime
+    tecnologie e tendenze del settore, e utilizziamo questo know-how
+    per creare soluzioni all'avanguardia che soddisfino le esigenze
+    dei nostri clienti. <br> Siamo anche molto attenti alla qualità del
+    codice che produciamo, in modo da garantire che le soluzioni che
+    forniamo siano robuste e scalabili. In sintesi, siamo un team di
+    sviluppatori web appassionati, esperti e altamente qualificati che
+    si impegnano a fornire soluzioni personalizzate e di alta qualità
+    ai nostri clienti. <br>
+  </p>
+  <p>
+    Ci teniamo a lavorare a stretto contatto con
+    loro per assicurare che le nostre soluzioni soddisfino le loro
+    esigenze e superino le loro aspettative
+  </p>
+</div>
