--- a/My-webapp/src/app/home/home.component.html
+++ b/My-webapp/src/app/home/home.component.html
@@ -1,64 +1,22 @@
 <!-- init section header-->
-<section>
-  <header>
+
+
     <nav>
-      <ul class="menu">
-        <li class="logo"><a href="#">SergeGuea</a></li>
-        <li class="item "><a href="#">Home</a></li>
+      <img src="https://dthinks.it/images/logo/Logo_DThinks.png" alt="logo">
+
+      <ul>
+        <li class="item "><i class="fa fa-home" aria-hidden="true"></i><a href="#">Home</a></li>
         <li class="item "><a href="#">Chi siamo</a></li>
         <li class="item "><a href="#">Mission</a></li>
-        <li class="item "><a href="#">Login</a></li>
-        <li class="item  "><a href="#">Sign Up</a></li>
+        <li class="item "><i class="fa-solid fa-right-from-bracket fa-fade"></i><a href="#">Login</a></li>
+        <li class="item  "><i class="fa fa-sign-out" aria-hidden="true"></i><a href="#">Sign Up</a></li>
         <li class="toggle"><span class="bars"></span></li>
       </ul>
     </nav>
-  </header>
-</section>
+    <div>
+      <h1>MY WEBAPP SERVICE </h1>
+  </div>
+
+
 <!-- end section header-->
-<style>
-  .img-fluid {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: relative;
-  }
-
-</style>
-<div class="img-fluid">
-  <img
-    src="/My-webapp/src/assets/img/slider2.jpg"
-    alt="slider2"
-    class="img-fluid"
-  />
-
-</div>
-<div>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <hr style="border-top: 5px solid #1c1835" />
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--init section carousel-->
-
-<section>
-  <div class="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="/My-webapp/src/assets/img/images.jpg" alt="foto" />
-      </div>
-      <div class="carousel-item">
-        <img src="/My-webapp/src/assets/img/slider2.jpg" alt="slider2" />
-      </div>
-      <div class="carousel-item">
-        <img src="/My-webapp/src/assets/img/slider3.jpg" alt="slider3" />
-      </div>
-    </div>
-  </div>
-</section>
-
-<!--end section carousel-->
 
