--- a/My-webapp/src/app/mission/mission.component.css
+++ b/My-webapp/src/app/mission/mission.component.css
@@ -1,31 +1,31 @@
-.about-us-mission {
-  padding: 40px 0;
+/*
+#totale{
+  width: 1100px;
+  margin:auto;
+  font-size: 18px;
 }
+.quadrato{
+  width: 200px;
+}
+#secondariga{
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+#primariga{
+  display: flex;
+  justify-content: space-between;
+}
+p{
+  text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+i{
+  margin-left: 40%;
+  margin-top: 10px;
+}*/
 
-.about-us-mission h2 {
-  font-size: 20px;
-  font-weight: 700;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-}
 
-.about-us-mission p {
-  font-size: 14px;
-  line-height: 1.8;
-  color: #666;
-}
 
-.about-us-mission-item {
-  padding: 20px;
-}
 
-.about-us-mission-item img {
-  width: 100px;
-  margin-bottom: 20px;
-}
-
-.about-us-mission-item p {
-  font-size: 14px;
-  line-height: 1.8;
-  color: #666;
-}
