--- a/My-webapp/src/app/menu/menu.component.html
+++ b/My-webapp/src/app/menu/menu.component.html
@@ -1,12 +1,12 @@
 <div id="totale">
   <h1>Key Values</h1>
   <div id="primariga">
-      <div class="quadrato"><i class="fa-sharp fa-solid fa-gear fx-3"></i><p>Approccio consultant</p></div>
-      <div class="quadrato"><i class="fa-sharp fa-solid fa-gear fx-3"></i><p>Istruttori d’eccellenza</p></div>
-      <div class="quadrato"><i class="fa-sharp fa-solid fa-gear fx-3"></i><p>Flessibilità</p></div>
+      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Approccio consultant</p></div>
+      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Istruttori d’eccellenza</p></div>
+      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Flessibilità</p></div>
   </div>
   <div id="secondariga">
-      <div class="quadrato"><i class="fa-sharp fa-solid fa-gear fx-3"></i><p>Formazione basata sull’assessment e valutazione</p></div>
-      <div class="quadrato"><i class="fa-sharp fa-solid fa-gear fx-3"></i><p>Focus sulla digital transformation e sulle tecnologie emergenti</p></div>
+      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Formazione basata sull’assessment e valutazione</p></div>
+      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Focus sulla digital transformation e sulle tecnologie emergenti</p></div>
   </div>
 </div>
