--- a/My-webapp/src/app/mission/mission.component.html
+++ b/My-webapp/src/app/mission/mission.component.html
@@ -1,58 +1,9 @@
 
-<style>
-  /* CSS for the missions section */
-#totale {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px 0;
-  background-color: #f5f5f5;
-}
-
-#totale h1 {
-  font-size: 3rem;
-  margin-bottom: 30px;
-  color: #333;
-  text-align: left;
-}
-
-#primariga, #secondariga {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
-}
-
-.quadrato {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(222, 240, 243);
-  width: 30%;
-  padding: 20px;
-  margin-bottom: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.quadrato i {
-  margin-bottom: 20px;
-  color: #333;
-}
-
-.quadrato p {
-  text-align: center;
-  font-size: 1.2rem;
-  color: #555;
-}
-
-</style>
-
 <div id="totale">
   <h1>Mission</h1>
   <div id="primariga">
       <div class="quadrato"><i class="fa fa-camera-retro fa-3x"></i><p>Formare Nuove Risorse seguendo le roadmap delle figure professionali richieste dal mercato</p></div>
-      <div class="quadrato"><i class="fa fa-battery-three-quarters fa-3x" aria-hidden="true"></i><p>Certificare le skills professionali</p></div>
+      <div class="quadrato"><i class="fa fa-rocket fa-5x" aria-hidden="true"></i><p>Certificare le skills professionali</p></div>
       <div class="quadrato"><i class="fa-sharp fa-solid fa-house fa-3x"></i><p>Soddisfare il gap formativo delle competenze nella sfera digitale</p></div>
   </div>
   <div id="secondariga">
