--- a/My-webapp/src/app/mission/mission.component.css
+++ b/My-webapp/src/app/mission/mission.component.css
@@ -1,31 +1,47 @@
-/*
-#totale{
-  width: 1100px;
-  margin:auto;
-  font-size: 18px;
-}
-.quadrato{
-  width: 200px;
-}
-#secondariga{
-  margin-top: 50px;
+#totale {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 0;
+  background-color: #f5f5f5;
 }
-#primariga{
-  display: flex;
-  justify-content: space-between;
-}
-p{
-  text-align: center;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-i{
-  margin-left: 40%;
-  margin-top: 10px;
-}*/
 
+#totale h1 {
+  font-size: 3rem;
+  margin-bottom: 30px;
+  color: #333;
+  text-align: left;
+}
+
+#primariga, #secondariga {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.quadrato {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(222, 240, 243);
+  width: 30%;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.quadrato i {
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.quadrato p {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #555;
+}
 
 
 
