i will modified the home.component.html and mission.component.html and mission.component.css file and i will commit the changes

--- a/My-webapp/src/app/home/home.component.html
+++ b/My-webapp/src/app/home/home.component.html
@@ -5,10 +5,10 @@
       <img src="https://dthinks.it/images/logo/Logo_DThinks.png" alt="logo">
 
       <ul>
-        <li class="item "><i class="fa fa-home" aria-hidden="true"></i><a href="#">Home</a></li>
+        <li class="item "><a href="#"><i class="fa-solid fa-house-user fa-1x"></i></a></li>
         <li class="item "><a href="#">Chi siamo</a></li>
         <li class="item "><a href="#">Mission</a></li>
-        <li class="item "><i class="fa-solid fa-right-from-bracket fa-fade"></i><a href="#">Login</a></li>
+        <li class="item "><a href="#"><i class="fa-solid fa-user-plus"></i></a></li>
         <li class="item  "><i class="fa fa-sign-out" aria-hidden="true"></i><a href="#">Sign Up</a></li>
         <li class="toggle"><span class="bars"></span></li>
       </ul>
