--- a/My-webapp/src/app/mission/mission.component.html
+++ b/My-webapp/src/app/mission/mission.component.html
@@ -2,8 +2,8 @@
 <div id="totale">
   <h1>Mission</h1>
   <div id="primariga">
-      <div class="quadrato"><i class="fa fa-camera-retro fa-3x"></i><p>Formare Nuove Risorse seguendo le roadmap delle figure professionali richieste dal mercato</p></div>
-      <div class="quadrato"><i class="fa fa-rocket fa-5x" aria-hidden="true"></i><p>Certificare le skills professionali</p></div>
+      <div class="quadrato"><i class="fa-solid fa-users fa-4x"></i><p>Formare Nuove Risorse seguendo le roadmap delle figure professionali richieste dal mercato</p></div>
+      <div class="quadrato"><i class="fa-solid fa-head-side-virus fa-4x"></i><p>Certificare le skills professionali</p></div>
       <div class="quadrato"><i class="fa-sharp fa-solid fa-house fa-3x"></i><p>Soddisfare il gap formativo delle competenze nella sfera digitale</p></div>
   </div>
   <div id="secondariga">
