--- a/My-webapp/src/app/mission/mission.component.css
+++ b/My-webapp/src/app/mission/mission.component.css
@@ -1,9 +1,9 @@
 #totale {
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   padding: 50px 0;
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
 
 #totale h1 {
@@ -18,6 +18,7 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin-bottom: 20px;
+
 }
 
 .quadrato {
@@ -25,22 +26,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(222, 240, 243);
+  background-color: #fff;
   width: 30%;
   padding: 20px;
   margin-bottom: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .quadrato i {
   margin-bottom: 20px;
-  color: #333;
+  color: rgb(190, 190, 15);
 }
 
 .quadrato p {
   text-align: center;
   font-size: 1.2rem;
   color: #555;
+}
+i{
+  font-size: 3rem;
+  color: yellow;
 }
 
 
