new file:   .DS_Store

--- a/My-webapp/src/app/menu/menu.component.html
+++ b/My-webapp/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div id="totale">
   <h1>Key Values</h1>
   <div id="primariga">
-      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Approccio consultant</p></div>
+      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>{{v1}}</p></div>
       <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Istruttori d’eccellenza</p></div>
       <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Flessibilità</p></div>
   </div>
