--- a/My-webapp/src/app/sidebar/sidebar.component.html
+++ b/My-webapp/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div><hr>
   <p>Siamo a tua disposizione per qualsiasi informazione <a href="#"> Compila il modulo di contratto </a>telefona al
       numero
-      +39 38 92 978 507 oppure scrivi a <a href="#">gueaserge2@gmail.com</a></p> </div>
+      +39 38 92 978 507 oppure scrivi a <a href="mailto:gueaserge2@gmail.com">gueaserge2@gmail.com</a></p> </div>
 
 
 <form action="message">
