--- a/My-webapp/src/app/home/home.component.html
+++ b/My-webapp/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <li class="item "><a href="#">Chi siamo</a></li>
         <li class="item "><a href="#">Mission</a></li>
         <li class="item "><a href="#"><i class="fa-solid fa-user-plus"></i></a></li>
-        <li class="item  "><i class="fa fa-sign-out" aria-hidden="true"></i><a href="#">Sign Up</a></li>
+        <li class="item  "><i class="fa fa-sign-out" aria-hidden="true"></i><a href="#">logout </a></li>
         <li class="toggle"><span class="bars"></span></li>
       </ul>
     </nav>
