--- a/ANGULAR-PROJECT/Angular-1/src/app/app.component.html
+++ b/ANGULAR-PROJECT/Angular-1/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-articolo [art]="myArticolo" > </app-articolo>
+<!-- <app-articolo [art]="myArticolo" > </app-articolo> -->
+<!-- <app-car-description> </app-car-description> -->
+<!-- <app-counter> </app-counter> -->
+<!-- <app-mouse> </app-mouse> -->
+<!-- <app-convertitore> </app-convertitore> -->
+<!-- <app-direttive> </app-direttive> -->
+<app-dir-strutturali> </app-dir-strutturali>
+<app-dr-strutturali2> </app-dr-strutturali2>
