--- a/My-webapp/src/app/menu/menu.component.html
+++ b/My-webapp/src/app/menu/menu.component.html
@@ -1,12 +1,15 @@
 <div id="totale">
-  <h1>Key Values</h1>
-  <div id="primariga">
-      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>{{v1}}</p></div>
-      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Istruttori d’eccellenza</p></div>
-      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Flessibilità</p></div>
-  </div>
-  <div id="secondariga">
-      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Formazione basata sull’assessment e valutazione</p></div>
-      <div class="quadrato"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i><p>Focus sulla digital transformation e sulle tecnologie emergenti</p></div>
-  </div>
+ <h2> Key Values </h2>
+
+<div class="wrap">
+    <div class="wrapInline">
+        <div class="biglietti" [style.background-color]="sfondo" (mouseover)="cambiaSfondo();" (mouseout)="sfondoIniziale();"> {{paroleChiave.v1}} </div>
+        <div class="biglietti" [style.background-color]="sfondo" (mouseover)="cambiaSfondo();" (mouseout)="sfondoIniziale();"> {{paroleChiave.v2}} </div>
+        <div class="biglietti" [style.background-color]="sfondo" (mouseover)="cambiaSfondo();" (mouseout)="sfondoIniziale();"> {{paroleChiave.v3}} </div>
+        <div class="fila2">
+            <div class="biglietti" [style.background-color]="sfondo" (mouseover)="cambiaSfondo();" (mouseout)="sfondoIniziale();"> {{paroleChiave.v4}} </div>
+            <div class="biglietti" [style.background-color]="sfondo" (mouseover)="cambiaSfondo();" (mouseout)="sfondoIniziale();"> {{paroleChiave.v5}} </div>
+        </div>
+    </div>
+</div>
 </div>
